tests/08-attr-empty.stderr
error: expected attribute arguments in parentheses: #[default(...)]
 --> $DIR/08-attr-empty.rs:5:5
  |
5 |     #[default]
  |     ^^^^^^^^^^
